--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
         "lightningcss-linux-x64-gnu": "^1.29.1"
     },
     "devDependencies": {
+        "@tailwindcss/forms": "^0.5.10",
+        "@tailwindcss/typography": "^0.5.16",
         "@tailwindcss/vite": "^4.1.8",
         "daisyui": "^5.0.43",
         "tailwindcss": "^4.1.8"
